test/langtools/tools/javac/patterns/FlowAnalysisAndConstantPatterns.out
FlowAnalysisAndConstantPatterns.java:14:13: compiler.err.pattern.dominated
1 error
